[tool.poetry]
name = "aepp"
version = "0.0.0" # Overwritten by the plugin
description = "Package to manage AEP API endpoint and some helper functions"
authors = ["Julien Piccini <piccini.julien@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "aepp"}]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "*"
requests = "*"
pathlib2 = "*"
tenacity = "*"
deprecation = "*"
datamodel-code-generator = "*"
rich = "*"
matplotlib = "*"
# Combined marker for unix-like systems
psycopg2-binary = { version = "*", markers = "sys_platform == 'darwin' or sys_platform == 'linux'" }
psycopg2 = { version = "*", markers = "sys_platform == 'win32'" }

[tool.poetry.scripts]
aepp = "aepp.cli.__main__:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "pattern"
pattern = "(?P<base>\\d+\\.\\d+\\.\\d+([-.]\\w+)?)"
files = ["aepp/__version__.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0"]
build-backend = "poetry_dynamic_versioning.backend"